fix: update package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "b-card",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sagarbuddhic.github.io/b-card/",
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "bootstrap": "^4.3.1",
@@ -12,6 +13,8 @@
     "react-scripts": "3.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
